--- a/Example_1.1
+++ b/Example_1.1
@@ -1,12 +1,12 @@
 ---
 title: "Example 1.1"
+author: "Rendell E . de Kort"
+date: "2/19/2020"
 output:
+  pdf_document: default
+  html_document: default
   word_document: default
-  html_document:
-    df_print: paged
 ---
-
-
 
 ## Packages
 In R, Many useful functions come in packages, free libraries of code written by R's active user community. To install an R package, open an R session and type at the command line
