--- a/Example_1.1
+++ b/Example_1.1
@@ -32,6 +32,8 @@ library(fable)
 library(feasts)
 # Tidy time series data 
 library(tsibbledata)
+# 
+library(dygraphs)
 ```
 
 ## Data, data description, and variables
@@ -40,3 +42,21 @@ To get us started we are calling up a data set called "global_economy" that is a
 global_economy
 ```
 You might have also noticed that the data further contains 3 more variables: Country, Code and Year. The "Year" variable is particularly important, since it is what we call the "index", which allows us to specify the time dimension of the data. "Country" and "Code" are "Key" variables. These allow us to seperate one country from the other as we start analyzing the data nad might want to treat each country seperatly as we do so. 
+
+```{r}
+global_economy %>%
+filter(Country=="Aruba")%>%
+select(Year,GDP)%>%
+  autoplot(GDP)
+```
+
+
+```{r}
+global_economy %>%
+filter(Country=="Aruba")%>%
+select(Year,GDP)%>%
+dygraph(main="Aruba Gross Domestic Product (GDP)", ylab = "GDP")%>%
+dyRangeSelector(dateWindow = c("1985", "2017"))%>%
+dyEvent("2009", "Refinery closes", labelLoc = "bottom") %>% 
+dyShading(from = "2008", to = "2010", color = "#FFE6E6")
+```
